# fluid

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.sh
cuda_version/: CMakeLists.txt  README.md
cuda_version/include/: fluid_simulation.h
cuda_version/src/: fluid_simulation.cu  main.cpp
cuda_version/visualizer/: visualize.py
resources/shaders/: shader.frag  shader.vert
src/: glwidget.cpp  glwidget.h  mainwindow.cpp  simulation.cpp  simulation.h
src/graphics/: camera.h  fluidcube.cpp  fluidcube.h  obstacle.cpp  obstacle.h  solidboundary.cpp  solidboundary.h  solver.cpp  solver.h  vectorfield.cpp  vectorfield.h
